# MAGI-Gem

./: .env.example  .geminiignore  .gitignore  GEMINI.md  MIGRATION_PLAN_GEMINI.md  Makefile  README.md  conftest.py  gemini-extension.json  pyproject.toml
.gemini/skills/magi-analysis/: SKILL.md  pyproject.toml
.gemini/skills/magi-analysis/agents/: caspar.md  melchior.md
.gemini/skills/magi-analysis/scripts/: reporting.py  subprocess_utils.py  synthesize.py  temp_dirs.py
.github/workflows/: release.yml  verify.yml
docs/: MAGI-System-Documentation.md
plans/: magi_orchestrator_verification_plan.md
skills/magi/: SKILL.md  pyproject.toml
skills/magi/agents/: balthasar.md  caspar.md  melchior.md
skills/magi/scripts/: consensus.py  models.py  parse_agent_output.py  reporting.py  run_magi.py  schema.json  status_display.py  stderr_shim.py  subprocess_utils.py  temp_dirs.py  validate.py
skills/magi/tests/: test_consensus.py  test_parse_agent_output.py  test_reporting.py  test_run_magi.py  test_synthesize.py  test_validate.py
