[project]
name = "magi-gem"
version = "0.1.0"
description = "MAGI Multi-Perspective Analysis for Gemini CLI"
authors = [{name = "Julian Bolivar"}]
requires-python = ">= 3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
