[project]
name = "magi-gem"
version = "0.1.8"
description = "MAGI Multi-Perspective Analysis for Gemini CLI"
license = "MIT OR Apache-2.0"
authors = [{name = "Julian Bolivar"}]
requires-python = ">= 3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
pythonpath = ["skills/magi/scripts"]
asyncio_mode = "strict"
